k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edisa
  labels:
    name: edisa
    app: microservice-system
